--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 <body>
 
   <header>
-    <img src="gandalf.jpeg" alt="Logo TolkienCritics - Gandalf" style="height: 80px;">
     <nav>
       <ul>
         <li><a href="index.html">Accueil</a></li>
@@ -32,6 +31,15 @@
       <img src="community.jpeg" alt="Communauté Tolkien" style="width: 100%; max-width: 500px;">
     </section>
 
+    <section>
+  <h2>Qui était Tolkien ?</h2>
+  <p>J.R.R. Tolkien, né en 1892 et mort en 1973, est l’auteur du <em>Seigneur des Anneaux</em>, du <em>Hobbit</em> et de nombreuses œuvres ayant donné naissance à l’univers de la Terre du Milieu.  
+  Linguiste passionné, professeur d’Oxford, Tolkien a inventé des langues entières et créé une mythologie foisonnante, mêlant poésie, histoire et nature.</p>
+  <p>Son amour pour la nature transparaît dans ses descriptions de la Comté, des forêts de Fangorn ou des paysages de Rohan.  
+  Aujourd’hui encore, son héritage inspire des millions de lecteurs et lectrices à travers le monde.</p>
+  <img src="tolkien.jpeg" alt="Portrait de J.R.R. Tolkien" style="width: 100%; max-width: 400px;">
+</section>
+    
     <section>
       <h2>Comment ça marche ?</h2>
       <ol>
