--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h1>Bienvenue sur TolkienCritics</h1>
       <p>Bienvenue sur <strong>TolkienCritics</strong>, le site dédié aux passionnés de l’univers de J.R.R. Tolkien !  
       Découvre, note et partage ton avis sur tous les livres qui font vivre la légende de la Terre du Milieu.</p>
-      <img src="shire.jpeg" alt="Paysage de la Comté" style="width: 100%; max-width: 600px;">
+      <img src="comte.webp" alt="Paysage de la Comté" style="width: 100%; max-width: 600px;">
     </section>
 
     <section>
@@ -47,7 +47,7 @@
         <li>Note les livres que tu as lus et partage ton avis.</li>
         <li>Rejoins les discussions et fais découvrir tes coups de cœur !</li>
       </ol>
-      <img src="middleearth.jpeg" alt="Carte de la Terre du Milieu" style="width: 100%; max-width: 500px;">
+      <img src="middleearth.webp" alt="Carte de la Terre du Milieu" style="width: 100%; max-width: 500px;">
     </section>
   </main>
 
