--- a/livres.html
+++ b/livres.html
@@ -27,7 +27,7 @@
 
     <section>
       <h2>🔹 Le Seigneur des Anneaux — La Communauté de l’Anneau</h2>
-      <img src="fellowship.jpeg" alt="Couverture La Communauté de l’Anneau" style="width: 100%; max-width: 400px;">
+      <img src="fellowship.webp" alt="Couverture La Communauté de l’Anneau" style="width: 100%; max-width: 400px;">
       <p><strong>Note moyenne :</strong> ⭐⭐⭐⭐⭐ (4,8/5)</p>
       <p><strong>Résumé :</strong>  
       La grande aventure commence ! Frodon Sacquet, héritier de l’Anneau Unique, quitte la Comté en compagnie de Gandalf, Aragorn, Legolas, Gimli et les autres membres de la communauté.</p>
@@ -48,7 +48,7 @@
 
     <section>
       <h2>🔹 Les Contes Perdus et Légendes Inachevées</h2>
-      <img src="unfinished.jpeg" alt="Couverture Contes et Légendes Inachevées" style="width: 100%; max-width: 400px;">
+      <img src="contes.png" alt="Couverture Contes et Légendes Inachevées" style="width: 100%; max-width: 400px;">
       <p><strong>Note moyenne :</strong> ⭐⭐⭐⭐☆ (4,3/5)</p>
       <p><strong>Résumé :</strong>  
       Des histoires inachevées mais passionnantes, révélant des facettes méconnues des héros et lieux de la Terre du Milieu.</p>
@@ -57,7 +57,7 @@
     </section>
 
     <section>
-      <h2>🔹 Lettres de Père Noël</h2>
+      <h2>🔹 Lettres du Père Noël</h2>
       <img src="fatherchristmas.jpeg" alt="Couverture Lettres du Père Noël" style="width: 100%; max-width: 400px;">
       <p><strong>Note moyenne :</strong> ⭐⭐⭐⭐⭐ (4,9/5)</p>
       <p><strong>Résumé :</strong>  
