--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 TolkienCritics — Un site pour les passionnés de Tolkien</p>
+    <p>&copy; 2025 TolkienCritics — Un site pour les passionnés de Tolkien, par Oravendis.</p>
   </footer>
 
 </body>
