--- a/livres.html
+++ b/livres.html
@@ -25,14 +25,20 @@
     </section>
 
     <section>
-      <h2>🔹 Le Seigneur des Anneaux — La Communauté de l’Anneau</h2>
-      <img src="fellowship.webp" alt="Couverture La Communauté de l’Anneau" style="width: 100%; max-width: 400px;">
-      <p><strong>Note moyenne :</strong> ⭐⭐⭐⭐⭐ (4,8/5)</p>
-      <p><strong>Résumé :</strong>  
-      La grande aventure commence ! Frodon Sacquet, héritier de l’Anneau Unique, quitte la Comté en compagnie de Gandalf, Aragorn, Legolas, Gimli et les autres membres de la communauté.</p>
-      <p><strong>Avis récents :</strong><br>
-      « Une épopée inoubliable ! » — Arwen77<br>
-      « Des paysages grandioses décrits avec poésie. » — Gandalf_Gris</p>
+    <article class="fiche-livre">
+  <div class="fiche-image">
+    <img src="community.jpeg" alt="Couverture Le Seigneur des Anneaux">
+  </div>
+  <div class="fiche-contenu">
+    <h2>🔹 Le Seigneur des Anneaux — La Communauté de l’Anneau</h2>
+    <p><strong>Note moyenne :</strong> ⭐⭐⭐⭐⭐ (4,8/5)</p>
+    <p><strong>Résumé :</strong> La grande aventure commence ! Frodon Sacquet quitte la Comté avec Gandalf, Aragorn, Legolas, Gimli et la communauté.</p>
+    <p><strong>Avis récents :</strong><br>
+      « Une épopée inoubliable ! » — Arwen77<br>
+      « Des paysages grandioses décrits avec poésie. » — Gandalf_Gris
+    </p>
+  </div>
+</article>
     </section>
 
     <section>
