--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <section>
       <h2>Comment ça marche ?</h2>
       <ol>
-        <li>Explore notre bibliothèque des œuvres de Tolkien.</li>
+        <li>Explore notre <a href="livres.html">bibliothèque des œuvres de Tolkien</a>.</li>
         <li>Note les livres que tu as lus et partage ton avis.</li>
         <li>Rejoins les discussions et fais découvrir tes coups de cœur !</li>
       </ol>
