--- a/livres.html
+++ b/livres.html
@@ -24,32 +24,39 @@
       Pour chaque ouvrage, tu trouveras une courte description, les notes de la communauté et un lien pour lire ou ajouter une critique.</p>
     </section>
 
-    <section>
-    <article class="fiche-livre">
-  <div class="fiche-image">
-    <img src="community.jpeg" alt="Couverture Le Seigneur des Anneaux">
-  </div>
-  <div class="fiche-contenu">
+  <section>
+   <article class="fiche-livre">
+        <div class="fiche-image">
+          <img src="fellowship.webp" alt="Couverture Le Seigneur des Anneaux">
+        </div>
+      <div class="fiche-contenu">
     <h2>🔹 Le Seigneur des Anneaux — La Communauté de l’Anneau</h2>
     <p><strong>Note moyenne :</strong> ⭐⭐⭐⭐⭐ (4,8/5)</p>
     <p><strong>Résumé :</strong> La grande aventure commence ! Frodon Sacquet quitte la Comté avec Gandalf, Aragorn, Legolas, Gimli et la communauté.</p>
     <p><strong>Avis récents :</strong><br>
       « Une épopée inoubliable ! » — Arwen77<br>
       « Des paysages grandioses décrits avec poésie. » — Gandalf_Gris
-    </p>
-  </div>
-</article>
-    </section>
+      </p>
+    </div>
+  </article>
+ </section>
 
-    <section>
+      <section>
+   <article class="fiche-livre">
+        <div class="fiche-image">
+          <img src="silmarillion.jpg" alt="Couverture Le Silmarillion">
+        </div>
+      <div class="fiche-contenu">
       <h2>🔹 Le Silmarillion</h2>
-      <img src="silmarillion.jpeg" alt="Couverture Le Silmarillion" style="width: 100%; max-width: 400px;">
-      <p><strong>Note moyenne :</strong> ⭐⭐⭐⭐☆ (4,5/5)</p>
-      <p><strong>Résumé :</strong>  
+    <p><strong>Note moyenne :</strong> ⭐⭐⭐⭐☆ (4,5/5)</p>
+    <p><strong>Résumé :</strong>
       Un recueil mythologique racontant la création d’Arda, la guerre des Silmarils, la chute de Morgoth et la destinée des Elfes.</p>
-      <p><strong>Avis récents :</strong><br>
+    <p><strong>Avis récents :</strong><br>
       « Dense, mais fascinant pour les fans de lore. » — Elrond_Lorekeeper</p>
-    </section>
+      </p>
+    </div>
+  </article>
+ </section>
 
     <section>
       <h2>🔹 Les Contes Perdus et Légendes Inachevées</h2>
