--- a/livres.html
+++ b/livres.html
@@ -41,7 +41,7 @@
   </article>
  </section>
 
-      <section>
+  <section>
    <article class="fiche-livre">
         <div class="fiche-image">
           <img src="silmarillion.jpg" alt="Couverture Le Silmarillion">
@@ -58,24 +58,37 @@
   </article>
  </section>
 
-    <section>
-      <h2>🔹 Les Contes Perdus et Légendes Inachevées</h2>
-      <img src="contes.png" alt="Couverture Contes et Légendes Inachevées" style="width: 100%; max-width: 400px;">
-      <p><strong>Note moyenne :</strong> ⭐⭐⭐⭐☆ (4,3/5)</p>
-      <p><strong>Résumé :</strong>  
-      Des histoires inachevées mais passionnantes, révélant des facettes méconnues des héros et lieux de la Terre du Milieu.</p>
-      <p><strong>Avis récents :</strong><br>
+ <section>
+   <article class="fiche-livre">
+        <div class="fiche-image">
+          <img src="contes.png" alt="Couverture Les Contes Perdus et Légendes Inachevées">
+        </div>
+      <div class="fiche-contenu">
+    <h2>🔹 Les Contes Perdus et Légendes Inachevées</h2>
+    <p><strong>Note moyenne :</strong> ⭐⭐⭐⭐☆ (4,3/5)</p>
+    <p><strong>Résumé :</strong>
+    Des histoires inachevées mais passionnantes, révélant des facettes méconnues des héros et lieux de la Terre du Milieu.</p>
+    <p><strong>Avis récents :</strong><br>
       « J’adore creuser ces mystères ! » — BilboBookworm</p>
-    </section>
+        </div>
+  </article>
+ </section>
 
-    <section>
-      <h2>🔹 Lettres du Père Noël</h2>
-      <img src="fatherchristmas.jpeg" alt="Couverture Lettres du Père Noël" style="width: 100%; max-width: 400px;">
-      <p><strong>Note moyenne :</strong> ⭐⭐⭐⭐⭐ (4,9/5)</p>
-      <p><strong>Résumé :</strong>  
-      Une compilation émouvante des lettres illustrées que Tolkien envoyait à ses enfants pour Noël, sous le nom du Père Noël.</p>
-    </section>
-
+   <section>
+   <article class="fiche-livre">
+        <div class="fiche-image">
+          <img src="lettres.jpg" alt="Couverture Lettres du Père Noël">
+        </div>
+      <div class="fiche-contenu">
+    <h2>🔹 Lettres du Père Noël</h2>
+    <p><strong>Note moyenne :</strong> ⭐⭐⭐⭐⭐☆ (4,9/5)</p>
+    <p><strong>Résumé :</strong>
+    Une compilation émouvante des lettres illustrées que Tolkien envoyait à ses enfants pour Noël, sous le nom du Père Noël.</p>
+    <p><strong>Avis récents :</strong><br>
+      « J'ai déjà hâte d'être à Noël » — Joffrey Mouton</p>
+        </div>
+  </article>
+     
     <section>
       <h2>👉 Envie d’ajouter ton avis ?</h2>
       <p>Connecte-toi ou crée un compte pour noter les livres et partager tes propres critiques !</p>
