--- a/livres.html
+++ b/livres.html
@@ -27,7 +27,7 @@
   <section>
    <article class="fiche-livre">
         <div class="fiche-image">
-          <img src="fellowship.webp" alt="Couverture Le Seigneur des Anneaux">
+          <img src="fellowship.jpg" alt="Couverture Le Seigneur des Anneaux">
         </div>
       <div class="fiche-contenu">
     <h2>🔹 Le Seigneur des Anneaux — La Communauté de l’Anneau</h2>
