--- a/livres.html
+++ b/livres.html
@@ -48,7 +48,7 @@
         </div>
       <div class="fiche-contenu">
       <h2>🔹 Le Silmarillion</h2>
-    <p><strong>Note moyenne :</strong> ⭐⭐⭐⭐☆ (4,5/5)</p>
+    <p><strong>Note moyenne :</strong> ⭐⭐⭐⭐⭐ (4,5/5)</p>
     <p><strong>Résumé :</strong>
       Un recueil mythologique racontant la création d’Arda, la guerre des Silmarils, la chute de Morgoth et la destinée des Elfes.</p>
     <p><strong>Avis récents :</strong><br>
@@ -65,7 +65,7 @@
         </div>
       <div class="fiche-contenu">
     <h2>🔹 Les Contes Perdus et Légendes Inachevées</h2>
-    <p><strong>Note moyenne :</strong> ⭐⭐⭐⭐☆ (4,3/5)</p>
+    <p><strong>Note moyenne :</strong> ⭐⭐⭐⭐⭐ (4,3/5)</p>
     <p><strong>Résumé :</strong>
     Des histoires inachevées mais passionnantes, révélant des facettes méconnues des héros et lieux de la Terre du Milieu.</p>
     <p><strong>Avis récents :</strong><br>
@@ -81,7 +81,7 @@
         </div>
       <div class="fiche-contenu">
     <h2>🔹 Lettres du Père Noël</h2>
-    <p><strong>Note moyenne :</strong> ⭐⭐⭐⭐⭐☆ (4,9/5)</p>
+    <p><strong>Note moyenne :</strong> ⭐⭐⭐⭐⭐⭐ (4,9/5)</p>
     <p><strong>Résumé :</strong>
     Une compilation émouvante des lettres illustrées que Tolkien envoyait à ses enfants pour Noël, sous le nom du Père Noël.</p>
     <p><strong>Avis récents :</strong><br>
