--- a/livres.html
+++ b/livres.html
@@ -96,8 +96,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 TolkienCritics — Tous droits réservés</p>
-  </footer>
+    <p>&copy; 2025 TolkienCritics — Un site pour les passionnés de Tolkien, par Oravendis.</p>  </footer>
 
 </body>
 </html>
