--- a/contact.html
+++ b/contact.html
@@ -46,8 +46,6 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 TolkienCritics — Merci de faire vivre la passion de Tolkien !</p>
-  </footer>
-
+    <p>&copy; 2025 TolkienCritics — Un site pour les passionnés de Tolkien, par Oravendis.</p>  </footer>
 </body>
 </html>
